// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTable Given a table full of data When using a footer Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="m--is-sortable">a1</td>
      <td>b1</td>
    </tr>
    <tr>
      <td class="m--is-sortable">a2</td>
      <td>b2</td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td>SLOT FOOTER</td>
    </tr>
  </tfoot>
</table>
`;

exports[`MTable Given a table full of data When using slot to replace a td Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="m--is-sortable">SLOT TD</td>
      <td>b1</td>
    </tr>
    <tr>
      <td class="m--is-sortable">SLOT TD</td>
      <td>b2</td>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given a table full of data When using slot to replace a th Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">SLOT TH <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="m--is-sortable">a1</td>
      <td>b1</td>
    </tr>
    <tr>
      <td class="m--is-sortable">a2</td>
      <td>b2</td>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given a table full of data When using slot to replace the header Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th>SLOT THEAD</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="m--is-sortable">a1</td>
      <td>b1</td>
    </tr>
    <tr>
      <td class="m--is-sortable">a2</td>
      <td>b2</td>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given a table full of data When using slot to replace the tbody Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>SLOT BODY</td>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given a table full of data When we don't use slots Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="m--is-sortable">a1</td>
      <td>b1</td>
    </tr>
    <tr>
      <td class="m--is-sortable">a2</td>
      <td>b2</td>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given an empty table When a custom slot is given Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr class="m-table__placeholder">
      <div class="m-table__placeholder-container" style="position:absolute;width:100%;">
        <div class="m-table__placeholder-message">
          <p>EMPTY</p>
        </div>
      </div>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given an empty table When loading Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-loading m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button disabled="disabled" icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr class="m-table__placeholder">
      <div class="m-table__placeholder-container" style="position:absolute;width:100%;">
        <m-progress indeterminate="indeterminate"></m-progress>
        <div class="m-table__placeholder-message">
          <p>m-table:loading</p>
          <p class="m-table__placeholder-precision">m-table:please-wait</p>
        </div>
      </div>
    </tr>
  </tbody>
</table>
`;

exports[`MTable Given an empty table When we use the default template Then should render correctly 1`] = `
<table cellspacing="0" class="m-table m--is-skin-regular m--is-row-highlighted-on-hover">
  <thead>
    <tr>
      <th scope="col" class="m--is-sortable" style="width:10%;">
        <div class="m-table__header-wrap">
          <div class="m-table__sortable-icon-wrap">
            <div class="m-table__header-name">A</div>
            <m-icon-button icon-name="m-svg__arrow-thin--up" skin="bold" button-size="14px" icon-size="12px" title="m-table:sort" class="m-table__sortable-icon"></m-icon-button>
          </div>
        </div>
      </th>
      <th scope="col">
        <div class="m-table__header-name">B</div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr class="m-table__placeholder">
      <div class="m-table__placeholder-container" style="position:absolute;width:100%;">
        <div class="m-table__placeholder-message">
          <p>m-table:no-data</p>
        </div>
      </div>
    </tr>
  </tbody>
</table>
`;
